testsuite/idls/idl02030/tin.idl
module M {
  typedef long Foo;
  const long thing = 1;
  interface thing { // error: reuse of identifier
    void doit (
      in Foo foo // error: Foo and foo collide and refer to different things
    );
    readonly attribute long Attribute;
          // error: Attribute collides with keyword attribute
  };
};
